# benchkit

./: .env.example  .gitignore  404.html  EXTENDING.md  GETTING_STARTED.md  Makefile  README.md  index.html  pyproject.toml
benchkit/: __init__.py  __main__.py  cli.py  config.py  debug.py  suite.py  util.py  validation.py
benchkit/cli/: __init__.py  main.py  probing.py  status.py  workflows.py
benchkit/combine/: __init__.py  combiner.py  (+2 more)
configs/: clickbench_exa_vs_ch.yaml  clickbench_exa_vs_ch_mu.yaml  exa_pe_vs_ch_1g.yaml  exa_vs_ch_100g.yaml  exa_vs_ch_100g_1to1.yaml  exa_vs_ch_100g_mn_mu.yaml  exa_vs_ch_100g_mn_mu20.yaml  exa_vs_ch_100g_mn_mu5.yaml  exa_vs_ch_100g_mn_mu50.yaml  exa_vs_ch_100g_mn_su.yaml  exa_vs_ch_100g_sn_mu.yaml  exa_vs_ch_100g_sn_mu20.yaml  exa_vs_ch_100g_sn_mu50.yaml  exa_vs_ch_100g_sn_su.yaml  exa_vs_ch_10g.yaml  exa_vs_ch_10g_mn.yaml  exa_vs_ch_10g_omtpw.yaml  exa_vs_ch_10g_stat.yaml  exa_vs_ch_1g.yaml  exa_vs_ch_1g_ebs.yaml  exa_vs_ch_1g_mn.yaml  exa_vs_ch_1g_mu.yaml  exa_vs_ch_1g_rootfs.yaml  exa_vs_ch_30g.yaml  exa_vs_ch_30g_mn.yaml  exa_vs_ch_vs_trino_1g.yaml  exa_vs_ch_vs_trino_30g.yaml  exa_vs_ch_vs_trino_30g_mn_mu.yaml  exa_vs_ch_vs_trino_30g_mu.yaml  stackit_exa_vs_ch_vs_duckdb_1g_g1a16.yaml  stackit_exa_vs_ch_vs_duckdb_1g_g1a8.yaml  stackit_exa_vs_ch_vs_duckdb_1g_m1a16.yaml  stackit_exa_vs_ch_vs_duckdb_1g_m1a8.yaml  test_exasol_clickbench_100g.yaml  test_exasol_estuary_10g.yaml  trino_test_1g.yaml  trino_test_1g_mn.yaml  trino_vs_ch_1g.yaml  wip_exa_vs_ch_clickbench_small.yaml  wip_exasol_clickbench_100g.yaml  (+1 more)
dev-docs/: DEVELOPERS.md  EXTENDING.md
docs/: DEVELOPERS.md  EXTENDING.md  GETTING_STARTED.md  PUBLISH.md  index.html
public/: index.html
scripts/: check_aws_credentials.py
templates/: macros.html.j2  report.html.j2  report.md.j2  report_index.html.j2  results_report.html.j2  results_report.md.j2  short_report.html.j2  short_report.md.j2  styles.css.j2
tests/: test_code_minimizer.py  test_dbgen.py  test_downloading.py  test_estuary_generator.py  test_import_cleaner.py  test_markup.py  test_parallel_executor.py  test_parallel_output_tagging.py  test_validation.py  test_workload_interface.py
user-docs/: GETTING_STARTED.md
(+2746 files in other folders)
