[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchkit"
version = "0.1.0"
description = "Modular framework for running and documenting database benchmarks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Exasol Labs", email = "labs@exasol.com"},
]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "kaleido>=1.0.0",
    "markdown>=3.0.0",
    "tabulate>=0.9.0",
    "psutil>=5.0.0",
    "paramiko>=3.0.0",
    "rich>=13.0.0",
    "boto3>=1.26.0",
    "docker>=6.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "tpchgen-cli>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    # Type stubs
    "types-tabulate>=0.9.0",
    "types-psutil>=5.9.0",
    "types-Markdown>=3.0.0",
    "pandas-stubs>=2.0.0",
    # Database drivers for testing framework (not needed in generated packages)
    "pyexasol>=0.25.0",
    "clickhouse-connect>=0.6.0",
]

[project.scripts]
benchkit = "benchkit.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
